--- a/server/package.json
+++ b/server/package.json
@@ -19,8 +19,7 @@
     "graphql": "^15.5.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.7",
-    "socket.io": "^4.4.0",
-    "stripe": "^8.67.0"
+    "socket.io": "^4.4.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
