--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   },
   "homepage": "https://github.com/IanClark-fullStack/dnd-stat-tracker#readme",
   "dependencies": {
-    "@mui/material": "^5.2.3",
-    "dotenv": "^10.0.0"
+    "@mui/material": "^5.2.3"
   }
 }
